--- a/profile/profile.html
+++ b/profile/profile.html
@@ -9,7 +9,7 @@
   <header class="header">
     <span class="logo">Блог №415</span>
     <div class="wrapper-left">
-      <a href="#">Главная</a>
+      <a href="../main/main.html">Главная</a>
       <a href="#">Написать пост</a>
     </div>
     <div class="wrapper-right" id="rightMenu">
