--- a/registration/registration.html
+++ b/registration/registration.html
@@ -12,7 +12,7 @@
     <div class="wrapper wrapper--left">
       <div>
         <ul>
-        <li><a href="#">Главная</a></li>
+        <li><a href="../main/main.html">Главная</a></li>
         </ul>
       </div>
     </div>
