added correct url and fixed pagination

--- a/main/main.html
+++ b/main/main.html
@@ -16,7 +16,7 @@
     <div class="wrapper-right" id="rightMenu">
       <div class="user-menu">
         <span id="user-email" class="user-menu-email">Вход</span>
-        <span class="dropdown-arrow">▼</span>
+        <span class="dropdown-arrow" id="dropdownArrow">▼</span>
           <div class="dropdown-content hidden" id="dropdownMenu">
               <a href="#" id="profile">Профиль</a>
               <a href="#" id="logout">Выход</a>
