created post page and added comment container, addresses

--- a/main/main.html
+++ b/main/main.html
@@ -137,5 +137,6 @@
   <script src="tags.js" type="module"></script>
   <script src="post.mjs" type="module"></script>
   <script src="pagination.mjs" type="module"></script>
+  <script src="communities.mjs" type="module"></script>
 </body>
 </html>
