I added click on the comment icon and scrolled to the comments section, displayed the attached comments and added the implementation of the response to the comment

--- a/postPage/postPage.html
+++ b/postPage/postPage.html
@@ -56,7 +56,7 @@
                 </div>
             </div>
         </div>
-        <div class="container-comments">
+        <div class="container-comments" id="comments-section">
             <h2 class="container-comments-title">Комментарии</h2>
             <div class="container-comments-box">
                 <div class="pretitle">${comment.author}</div>
