--- a/createPost/createPost.html
+++ b/createPost/createPost.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
   <title>Profile</title>
 </head>
 <body>
@@ -25,7 +26,7 @@
     </div>
   </header>
   <main>
-    <div class="container">
+    <div class="container" >
         <h1 class="title">Написать новый пост</h1>
         <form class="container-post">
             <div class="container-post-first">
@@ -62,12 +63,8 @@
             </div>
         </form>
         <h2 class="address">Адрес</h2>
-            <form class="container-address">
-                  <div class="container-field" >
-                      <label for="subject">Субъект РФ</label>
-                      <select class="select" name="subject" id="subject"></select>
-                  </div>
-            </form>
+        <div class="address-container"> 
+        </div>
         <button class="create-btn">Создать пост</button>
       </div>
     </div>
@@ -78,5 +75,8 @@
   </footer>
   <script src="createPost.mjs" type="module"></script>
   <script src="../main/tags.js" type="module"></script>
+  <script src="createAddress.js" type="module"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
 </body>
 </html>
