done create post

--- a/profile/profile.html
+++ b/profile/profile.html
@@ -10,7 +10,7 @@
     <span class="logo">Блог №415</span>
     <div class="wrapper-left">
       <a href="../main/main.html">Главная</a>
-      <a href="#">Написать пост</a>
+      <a href="../createPost/createPost.html">Написать пост</a>
     </div>
     <div class="wrapper-right" id="rightMenu">
       <div class="user-menu">
