done community page

--- a/createPost/createPost.html
+++ b/createPost/createPost.html
@@ -12,7 +12,7 @@
     <div class="wrapper-left">
       <a href="../main/main.html">Главная</a>
       <a href="#">Авторы</a>
-      <a href="#">Группы</a>
+      <a href="../communities/communities.html">Группы</a>
     </div>
     <div class="wrapper-right" id="rightMenu">
       <div class="user-menu">
