--- a/postPage/postPage.html
+++ b/postPage/postPage.html
@@ -11,7 +11,7 @@
     <div class="wrapper-left">
       <a href="../main/main.html">Главная</a>
       <a href="#">Авторы</a>
-      <a href="#">Группы</a>
+      <a href="../communities/communities.html">Группы</a>
     </div>
     <div class="wrapper-right" id="rightMenu">
       <div class="user-menu">
