done authors page

--- a/createPost/createPost.html
+++ b/createPost/createPost.html
@@ -11,7 +11,7 @@
     <span class="logo">Блог №415</span>
     <div class="wrapper-left">
       <a href="../main/main.html">Главная</a>
-      <a href="#">Авторы</a>
+      <a href="../authors/authors.html">Авторы</a>
       <a href="../communities/communities.html">Группы</a>
     </div>
     <div class="wrapper-right" id="rightMenu">
