--- a/profile/profile.html
+++ b/profile/profile.html
@@ -62,6 +62,6 @@
   <footer>
     <p>© 2022 - Блог №415</p>
   </footer>
-  <script src="profile.js"></script>
+  <script src="profile.js" type="module"></script>
 </body>
 </html>
