i wrote a separate dropdown menu and structed the code

--- a/authorization/authorization.html
+++ b/authorization/authorization.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/authorization/style.css">
   
   <title>Authorization</title>
 </head>
