fixed select and author's filter

--- a/profile/profile.html
+++ b/profile/profile.html
@@ -14,7 +14,7 @@
     </div>
     <div class="wrapper-right" id="rightMenu">
       <div class="user-menu">
-        <span id="user-email" class="user-menu-email"></span>
+        <span id="user-email" class="user-menu-email">Вход</span>
         <span class="dropdown-arrow">▼</span>
           <div class="dropdown-content hidden" id="dropdownMenu">
               <a href="#" id="profile">Профиль</a>
