--- a/communityPage/communityPage.html
+++ b/communityPage/communityPage.html
@@ -57,17 +57,6 @@
           <div class="count-post">
             <label class="count-post-label" for="size">Число постов на странице</label>
             <select class="count-post-select" name="size" id="size">
-                <option value="5" class="count">5</option>
-                <option value="6" class="count">6</option>
-                <option value="7" class="count">7</option>
-                <option value="8" class="count">8</option>
-                <option value="9" class="count">9</option>
-                <option value="10" class="count">10</option>
-                <option value="11" class="count">11</option>
-                <option value="12" class="count">12</option>
-                <option value="13" class="count">13</option>
-                <option value="14" class="count">14</option>
-                <option value="15" class="count">15</option>
             </select>
           </div>
         </div>
@@ -77,6 +66,7 @@
     <p>© 2022 - Блог №415</p>
   </footer>
   <script src="communityPage.js" type="module"></script>
+  <script src="../main/select.js" type="module"></script>
   <script src="../main/tags.js" type="module"></script>
   <script src="../main/postSorting.mjs" type="module"></script>
 </body>
