--- a/main/main.html
+++ b/main/main.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css">
-  <title>Profile</title>
+  <title>Main</title>
 </head>
 <body>
   <header class="header">
